--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.4.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.2",
