--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.2",
     "chakra-react-select": "^4.4.3",
     "eslint": "^8.34.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.2",
     "query-string": "^8.1.0",
