--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/inter": "^4.5.15",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
+    "buffer": "^6.0.3",
     "chakra-react-select": "^4.4.3",
     "eslint": "^8.34.0",
     "file-saver": "^2.0.5",
@@ -38,6 +39,8 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.2",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "vite-plugin-rewrite-all": "^1.0.1",
     "yup": "^1.0.0"
   },
